@@ -2,14 +2,6 @@ local _, GW = ...
 
 local function addJailersTowerData(block, numCriteria)
     if IsInJailersTower() then
-        local widgetInfo = C_UIWidgetManager.GetScenarioHeaderCurrenciesAndBackgroundWidgetVisualizationInfo(3302)
-        local remainingDeathText, remainingDeath
-        if widgetInfo and widgetInfo.currencies and widgetInfo.currencies[2] then
-            local currencies = widgetInfo.currencies
-            remainingDeathText = currencies[2].tooltip
-            remainingDeath = currencies[2].text
-        end
-
         --Phantasma
         local phinfo = C_CurrencyInfo.GetCurrencyInfo(1728)
         numCriteria = numCriteria + 1
@@ -32,58 +24,87 @@ local function addJailersTowerData(block, numCriteria)
         objectiveBlock:HookScript("OnLeave", GameTooltip_Hide)
         objectiveBlock:SetHeight(objectiveBlock:GetHeight() + 10)
 
-        --reamaning death
-        if remainingDeath then
-            numCriteria = numCriteria + 1
-            GW.AddScenarioObjectivesBlock(
-                block,
-                "|TInterface/AddOns/GW2_UI/textures/icons/icon-dead:0:0:0:0:64:64:4:60:4:60|t " .. remainingDeath .. " " .. remainingDeathText,
-                false,
-                numCriteria,
-                "monster",
-                phinfo.quantity
-            )
-        end
-
         -- grab new bar
         numCriteria = numCriteria + 1
-        local container = TopScenarioWidgetContainerBlock
         objectiveBlock = GW.GetScenarioObjectivesBlock(block, numCriteria)
-        objectiveBlock:SetHeight(container:GetHeight() + 1)
-        container:SetParent(objectiveBlock)
-        container:ClearAllPoints()
-        container:SetAllPoints()
+        TopScenarioWidgetContainerBlock.gwBlock = objectiveBlock
+        objectiveBlock:SetHeight(max(TopScenarioWidgetContainerBlock:GetHeight(), TopScenarioWidgetContainerBlock.WidgetContainer:GetHeight(), 45))
+        TopScenarioWidgetContainerBlock.SetParent = nil
+        TopScenarioWidgetContainerBlock.ClearAllPoints = nil
+        TopScenarioWidgetContainerBlock.SetPoint = nil
+        TopScenarioWidgetContainerBlock:SetParent(objectiveBlock)
+        TopScenarioWidgetContainerBlock:ClearAllPoints()
+        TopScenarioWidgetContainerBlock:SetPoint("TOP")
+        TopScenarioWidgetContainerBlock.SetParent = GW.NoOp
+        TopScenarioWidgetContainerBlock.ClearAllPoints = GW.NoOp
+        TopScenarioWidgetContainerBlock.SetPoint = GW.NoOp
         objectiveBlock:Show()
         objectiveBlock.ObjectiveText:SetText("")
         block.height = block.height + objectiveBlock:GetHeight()
         block.numObjectives = block.numObjectives + 1
+
+        if not TopScenarioWidgetContainerBlock.gwHooked then
+            hooksecurefunc(TopScenarioWidgetContainerBlock, "SetHeight", function()
+                if TopScenarioWidgetContainerBlock:IsShown() and TopScenarioWidgetContainerBlock.gwBlock then
+                    GW.updateCurrentScenario(GwQuesttrackerContainerScenario)
+                end
+            end)
+
+            hooksecurefunc(TopScenarioWidgetContainerBlock.WidgetContainer, "SetHeight", function()
+                if TopScenarioWidgetContainerBlock:IsShown() and TopScenarioWidgetContainerBlock.gwBlock then
+                    GW.updateCurrentScenario(GwQuesttrackerContainerScenario)
+                end
+            end)
+
+            TopScenarioWidgetContainerBlock.gwHooked = true
+        end
 
         -- grab the MawBuffs Button from here
         numCriteria = numCriteria + 1
-        local container = _G.ScenarioBlocksFrame.MawBuffsBlock.Container
         objectiveBlock = GW.GetScenarioObjectivesBlock(block, numCriteria)
-        objectiveBlock:SetHeight(container:GetHeight())
-        container:SetParent(objectiveBlock)
-        container:ClearAllPoints()
-        container:SetAllPoints()
+        objectiveBlock:SetHeight(ScenarioBlocksFrame.MawBuffsBlock.Container:GetHeight())
+        ScenarioBlocksFrame.MawBuffsBlock.Container:SetParent(objectiveBlock)
+        ScenarioBlocksFrame.MawBuffsBlock.Container:ClearAllPoints()
+        ScenarioBlocksFrame.MawBuffsBlock.Container:SetAllPoints()
         objectiveBlock:Show()
         objectiveBlock.ObjectiveText:SetText("")
         block.height = block.height + objectiveBlock:GetHeight()
         block.numObjectives = block.numObjectives + 1
 
-         -- grab new auras
-         numCriteria = numCriteria + 1
-         local container = BottomScenarioWidgetContainerBlock
-         objectiveBlock = GW.GetScenarioObjectivesBlock(block, numCriteria)
-         objectiveBlock:SetHeight(container:GetHeight() + 10)
-         container:SetParent(objectiveBlock)
-         container:ClearAllPoints()
-         container:SetPoint("TOPLEFT")
-         container:SetPoint("BOTTOMLEFT")
-         objectiveBlock:Show()
-         objectiveBlock.ObjectiveText:SetText("")
-         block.height = block.height + objectiveBlock:GetHeight()
-         block.numObjectives = block.numObjectives + 1
+        -- grab new auras
+        numCriteria = numCriteria + 1
+        objectiveBlock = GW.GetScenarioObjectivesBlock(block, numCriteria)
+        BottomScenarioWidgetContainerBlock.gwBlock = objectiveBlock
+        objectiveBlock:SetHeight(max(BottomScenarioWidgetContainerBlock:GetHeight(), BottomScenarioWidgetContainerBlock.WidgetContainer:GetHeight()))
+        BottomScenarioWidgetContainerBlock.SetParent = nil
+        BottomScenarioWidgetContainerBlock.ClearAllPoints = nil
+        BottomScenarioWidgetContainerBlock.SetPoint = nil
+        BottomScenarioWidgetContainerBlock:SetParent(objectiveBlock)
+        BottomScenarioWidgetContainerBlock:ClearAllPoints()
+        BottomScenarioWidgetContainerBlock:SetPoint("TOP", 0, 15)
+        BottomScenarioWidgetContainerBlock.SetParent = GW.NoOp
+        BottomScenarioWidgetContainerBlock.ClearAllPoints = GW.NoOp
+        BottomScenarioWidgetContainerBlock.SetPoint = GW.NoOp
+        objectiveBlock:Show()
+        objectiveBlock.ObjectiveText:SetText("")
+        block.height = block.height + objectiveBlock:GetHeight() + 15
+        block.numObjectives = block.numObjectives + 1
+
+        if not BottomScenarioWidgetContainerBlock.gwHooked then
+            hooksecurefunc(BottomScenarioWidgetContainerBlock, "SetHeight", function()
+                if BottomScenarioWidgetContainerBlock:IsShown() and BottomScenarioWidgetContainerBlock.gwBlock then
+                    GW.updateCurrentScenario(GwQuesttrackerContainerScenario)
+                end
+            end)
+
+            hooksecurefunc(BottomScenarioWidgetContainerBlock.WidgetContainer, "SetHeight", function()
+                if BottomScenarioWidgetContainerBlock:IsShown() and BottomScenarioWidgetContainerBlock.gwBlock then
+                    GW.updateCurrentScenario(GwQuesttrackerContainerScenario)
+                end
+            end)
+
+            BottomScenarioWidgetContainerBlock.gwHooked = true
+        end
     end
 
     return numCriteria
